networking/np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: accounting-np
  namespace: accounting
spec:
  podSelector:
    matchLabels:
      role: payroll 
  policyTypes:
    - Ingress
    - Egress
